--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/John-Fries-J/minecraft-serverlist#readme",
   "dependencies": {
+    "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "minecraft-server-util": "^5.4.4"
   }
